--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 
     <div class="topnav">
-    	<a class="active" href="#home"> Home</a>
+    	<a class="active" href="index.html"> Home</a>
     	<a href="aboutme1.html">About Me</a>
     	<a href="Projects.html">Projects</a>
     	<a href="#contact">Contact</a>
